<resources>
    <string name="app_name">Sriexpo</string>

    <string name="title_login">Login</string>
    <string name="et_hint_email_id">Type your Email</string>
    <string name="et_hint_password_id">Type Your Password</string>
    <string name="lbl_email">E-mail</string>
    <string name="lbl_pass">Password</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Not Registered Yet , Sign Up !</string>
    <string name="register">Register</string>

    <string name="create_an_account">Create an Account</string>

    <string name="hint_last_name">Last Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_first_id">NIC</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="last_name">Last Name :</string>
    <string name="nic">NIC :</string>
    <string name="id">ID</string>
    <string name="user_name">User Name :</string>
    <string name="username">Username</string>
    <string name="add_new">Add New</string>
    <string name="view_list">View List</string>
    <string name="first_name">First Name</string>




<!--Moshi-->
    <string name="hi_n_please_login" translatable="false">Hi,\n Please Login</string>
    <string name="enter_your_email_address" translatable="false">Enter Your Email Address</string>
    <string name="enter_your_name" translatable="false">Enter Your Name</string>
    <string name="name" translatable="false">Name</string>
    <string name="user_nprofile" translatable="false">User\nProfile</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone_number" translatable="false">Phone N0</string>
    <string name="enter_your_password" translatable="false">Enter Your Password</string>
    <string name="Password" translatable="false">Password</string>
    <string name="UPDATE" translatable="false">UPDATE PROFILE</string>
    <string name="DELETE" translatable="false">DELETE PROFILE</string>
    <string name="login" translatable="false">Login</string>
    <string name="Todo" translatable="false">TODO</string>
    <string name="start" translatable="false">START</string>
    <string name="home" translatable="false">Home</string>

<!--    Imalka-->

    <string name="hint_last_name1">Business ID </string>
    <string name="hint_first_name1">Organization Name</string>
    <string name="hint_first_id1">Phone Number</string>
    <string name="last_name1">Registration No:</string>
    <string name="nic1">Phone Number :</string>
    <string name="view_list1">View Packages</string>
    <string name="first_name1">Organization Name</string>



</resources>