<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6599c5"
    tools:context=".RegisterActivity1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView

            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:src="@drawable/_logo_01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="JOIN US !! "
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/input"
            android:hint="@string/hint_first_name1"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="@string/hint_last_name1"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <EditText
            android:id="@+id/id"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="@string/hint_first_id1"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="@string/lbl_email"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id" />

        <EditText
            android:id="@+id/passET"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="@string/lbl_pass"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:passwordToggleEnabled="true" />


        <EditText
            android:id="@+id/confirmPassEt"

            android:layout_width="360dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/input"
            android:hint="@string/et_hint_confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:boxStrokeColor="@color/teal_700"
            app:hintTextColor="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passET"
            app:passwordToggleEnabled="true" />


        <Button
            android:id="@+id/registerBtn"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="656dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account , Sign In !"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>